2009-05-30  Ethan A Merritt  <merritt@u.washington.edu>

	* share/LaTeX/Makefile.am:   Add ${prefix}/usr in front of the 
	install directory for latex files.  This probably still doesn't work
	correctly, because kpsexpand may not return a reasonable path.
	But at least if you have write permission to ${prefix} then
	'make install' will not fail.
	Bugfix #2798303

2009-05-30  Thomas Sefzick <thse@users.sourceforge.net>

	* src/graph3d.c (do_3dplot):  Adjust position of 3D plot with
	'set view equal xyz' so that the center of rotation is at the center
	of the screen.
	Bugfix #2797226

2009-05-30  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm term/js/gnuplot_mouse.js:  Give each plot its own
	namespace, so that multiple mouseable plots in the same document do
	not overwrite each other's mouse readout.

	* demo/cities.dem demo/html/Makefile.canvas demo/html/webify_canvas.pl
	demo/html/index.canvas demo/html/mousebox.template
	demo/html/canvas_utf8.dem:
	Add scripts to generate a demo set for the canvas terminal.

	* term/js/README:  Provide some documentation on using the canvas
	terminal to create web pages, and on known browser quirks.

2009-05-28  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm:  Javascript output using the "name" option now
	initializes the mouse and zoom tracking for each plot.  This will be
	needed in order to embed multiple mouseable plots in a single document.

	* term/canvas.trm term/js/gnuplot_common.js:
	Dots were not handled by the zoom code.  Create a new routined Dot(x,y)
	to wrap the call to strokeRect().  Bugfix.

	* term/x11.trm: Silence an escaped debug fprintf.  Bugfix.

2008-05-25  Peter Hedwig  <peter@affenbande.org>

	* src/Makefile.am term/lua/ChangeLog term/lua/gnuplot.lua
	 term/lua/gnuplot-lua-tikz.sty term/lua/gnuplot-tikz.help
	 term/lua/gnuplot-tikz.lua term/lua/NEWS term/lua.trm:

	Rearrange internal documentation, improved error handling,