@@ -7,6 +7,10 @@
 	'make install' will not fail.
 	Bugfix #2798303
 
+	* share/LaTeX/Makefile.am term/lua/README */gnuplot-lua-tikz.sty:
+	Move gnuplot-lua-tikz.sty from term/lua/ to share/LaTeX/ so that it can
+	be installed along with other latex support files.
+
 2009-05-30  Thomas Sefzick <thse@users.sourceforge.net>
 
 	* src/graph3d.c (do_3dplot):  Adjust position of 3D plot with
